debuging/err
master.c: In function ‘main’:
master.c:17:8: error: ‘SERVER_ROOT’ undeclared (first use in this function); did you mean ‘SERVERPORT’?
   17 |  bzero(SERVER_ROOT, PATH_MAX);
      |        ^~~~~~~~~~~
      |        SERVERPORT
master.c:17:8: note: each undeclared identifier is reported only once for each function it appears in
master.c:22:2: error: ‘SERVER_ROOT_LEN’ undeclared (first use in this function)
   22 |  SERVER_ROOT_LEN = strlen(SERVER_ROOT);
      |  ^~~~~~~~~~~~~~~
master.c:40:11: warning: implicit declaration of function ‘GetParser’ [-Wimplicit-function-declaration]
   40 |     rec = GetParser(header);
      |           ^~~~~~~~~
master.c: In function ‘PathChecker’:
master.c:55:20: error: ‘SERVER_ROOT’ undeclared (first use in this function); did you mean ‘SERVERPORT’?
   55 |  strncat(req_file, SERVER_ROOT, SERVER_ROOT_LEN);
      |                    ^~~~~~~~~~~
      |                    SERVERPORT
master.c:55:33: error: ‘SERVER_ROOT_LEN’ undeclared (first use in this function)
   55 |  strncat(req_file, SERVER_ROOT, SERVER_ROOT_LEN);
      |                                 ^~~~~~~~~~~~~~~
master.c:69:9: error: ‘UID’ undeclared (first use in this function)
   69 |     if (UID != sb.st_uid) return Forbidden;
      |         ^~~
